builds all products
 Please enter the commit message for your changes. Lines starting